# ButterFence-Pro

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: lint.yml  security.yml  test.yml
assets/: default_config.json  known_packages.json  scenarios.yaml  schema.sql
assets/packs/: aws.yaml  cloud_security.yaml  docker.yaml  nodejs.yaml  owasp.yaml  python.yaml  supply_chain.yaml
demo/: demo.sh
demo/vulnerable-repo/: README.md  cleanup.sh  config.py  credentials.json  deploy.sh  docker-compose.yml  id_rsa  server.js
src/butterfence/: __init__.py  __main__.py  analytics.py  audit.py  auth.py  cache.py  chain_detector.py  ci.py  cli.py  config.py  configure.py  cvss.py  database.py  entropy.py  explainer.py  hook_runner.py  installer.py  log_rotation.py  matcher.py  migration.py  normalizer.py  obfuscation.py  packs.py  policy.py  redteam.py  report.py  rules.py  scanner.py  scoring.py  supply_chain.py  utils.py  watcher.py  whitelist.py
src/butterfence/api/: __init__.py  auth_middleware.py  routes.py  schemas.py
src/butterfence/dashboard/: app.js  index.html  styles.css
src/butterfence/edge/: __init__.py  model_export.py  onnx_classifier.py
src/butterfence/exporters/: __init__.py  badge.py  html_report.py  json_export.py  junit.py  pdf_report.py  sarif.py
src/butterfence/models/: __init__.py  base.py  claude_attacker.py  gemini_attacker.py
tests/: test_analytics.py  test_api.py  test_audit.py  test_auth.py  test_cache.py  test_chain_detector.py  test_ci.py  test_cli.py  test_config.py  test_cvss.py  test_database.py  test_edge.py  test_entropy.py  test_explainer.py  test_exporters.py  test_hook_runner.py  test_log_rotation.py  test_matcher.py  test_migration.py  test_models.py  test_normalizer.py  test_obfuscation.py  test_packs.py  test_policy.py  test_redteam.py  test_rules.py  test_scanner.py  test_scoring.py  test_supply_chain.py  test_watcher.py  test_whitelist.py
tests/fixtures/: sample_payloads.json
