[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "butterfence"
version = "0.3.2"
description = "Claude Code-native safety harness that red-teams repos against destructive/secret-leaking agent behavior"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "pathspec>=0.11",
    "anthropic>=0.39",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.5"]
api = ["fastapi>=0.109", "uvicorn>=0.27", "pydantic>=2"]
pdf = ["reportlab>=4"]
edge = ["numpy>=1.24", "onnx>=1.14", "onnxruntime>=1.16"]
dev = [
    "pytest>=8",
    "pytest-cov>=4.1.0",
    "httpx>=0.27",
    "black>=24.3.0",
    "pylint>=3.0.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "isort>=5.13.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
butterfence = "butterfence.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/butterfence"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv", "venv"]
skips = ["B101", "B601"]  # B101: assert_used, B601: paramiko_calls

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/*_test.py"]
